--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,9 @@
 
-nav img {
-  height: 100px;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-
+a {
+  text-decoration: none;
