--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,79 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
 a {
   text-decoration: none;
+}
+
+nav {
+  margin: 0 auto;
+  text-align: right;
+}
+
+.top-nav {
+  width: 100%;
+  height: 85px;
+  border-bottom: 1px solid #000;
+  position: fixed;
+}
+
+.logo {
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 70px;
+  height: 60px;
+}
+
+.top-nav ul {
+  font-family: 'Merriweather Sans', sans-serif;
+  display: inline-block;
+  margin-right: 70px;
+  text-transform: uppercase;
+  padding-top: 30px;
+  font-size: larger;
+}
+
+.top-nav a {
+  color: white;
+}
+
+.top-nav ul li {
+  display: inline-block;
+  padding-left: 60px;
+}
+
+.banner-intro {
+  background-image: linear-gradient(rgb(0,0,0,0.6),rgb(0,0,0,0.6)), url(/img/bg.jpg);
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+} 
+
+.banner-intro h2 {
+  font-family: 'Concert One', cursive;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 80px;
+}
+
+.main {
+  
+}
+
+.services {
+  height: 400px;
+}
+
+.about {
+  height: 250px;
+  background-color: #bebebe;
+}
