--- a/css/styles.css
+++ b/css/styles.css
@@ -1,79 +1,159 @@
 
-* {
+
+*, *::before, *::after {
   box-sizing: border-box;
-  margin: 0 auto;
-  padding: 0;
 }
 
-a {
-  text-decoration: none;
-}
-
-nav {
-  margin: 0 auto;
-  text-align: right;
-}
-
-.top-nav {
-  width: 100%;
-  height: 85px;
-  border-bottom: 1px solid #000;
-  position: fixed;
-}
-
-.logo {
-  display: block;
-  position: absolute;
-  top: 10px;
-  left: 70px;
-  height: 60px;
-}
-
-.top-nav ul {
-  font-family: 'Merriweather Sans', sans-serif;
-  display: inline-block;
-  margin-right: 70px;
-  text-transform: uppercase;
-  padding-top: 30px;
-  font-size: larger;
-}
-
-.top-nav a {
-  color: white;
-}
-
-.top-nav ul li {
-  display: inline-block;
-  padding-left: 60px;
-}
-
-.banner-intro {
-  background-image: linear-gradient(rgb(0,0,0,0.6),rgb(0,0,0,0.6)), url(/img/bg.jpg);
-  -webkit-background-size: cover;
-  background-size: cover;
-  background-position: center center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-} 
-
-.banner-intro h2 {
-  font-family: 'Concert One', cursive;
-  text-transform: uppercase;
-  color: #fff;
-  font-size: 80px;
+body {
+  margin: 0;
+  /* Font goes here */
 }
 
 .main {
+  height: 100vh;
+  background-image: linear-gradient(rgb(0,160,210,0.6), rgb(0,160,210,0.6)), url(/img/bg.jpg);
+  background-blend-mode: multiply;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
 }
 
-.services {
-  height: 400px;
+/* Navigation starts here */
+
+header {
+  text-align: center;
+  background: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  border-bottom: 1px solid #e5e5e5;
 }
 
-.about {
-  height: 250px;
-  background-color: #bebebe;
+
+.logo {
+  height: 50px;
 }
+
+nav {
+position: absolute;
+text-align: left;
+left: 0%;
+top: 100;
+background: #fff;
+width: 100%;
+display: none;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  margin-bottom: 0;
+  margin-left: 0;
+  list-style-type: none;
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+  padding: 1em;
+  padding-left: 2em;
+  
+}
+
+nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+nav a:hover {
+  color: #00a0d2;
+  text-decoration: underline;
+}
+
+.nav-toggle:checked ~ nav {
+  display: block;
+}
+
+.nav-toggle {
+  display: none;
+}
+
+.nav-toggle-label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 2em;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-toggle-label span, 
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  display: block;
+  background: black;
+  height: 2px;
+  width: 3em;
+  border-radius: 2px;
+  position: relative;
+}
+
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  content: '';
+  position: absolute;
+}
+
+.nav-toggle-label span::before {
+  bottom: 7px;
+}
+
+.nav-toggle-label span::after {
+  top: 7px;
+}
+
+@media screen and (min-width: 840px) {
+  .nav-toggle-label{
+    display: none;
+  }
+  header {
+    display: grid;
+    grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
+  }
+
+  .logo {
+    grid-column: 2 / span 1;
+    margin-top: .5em;
+    margin-bottom: .5em;
+  }
+
+  nav {
+    all: unset;
+    grid-column: 3 / 4;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  nav ul {
+    display: flex;
+    justify-content: flex-end;
+    border: 1px solid red;
+  }
+
+  nav li {
+    all: unset;
+    margin-left: 3em;
+    margin-bottom: 0;
+  }
+
+  nav a {
+    position: relative;
+  }
+}
+
