--- a/css/styles.css
+++ b/css/styles.css
@@ -9,47 +9,94 @@ a {
   text-decoration: none;
 }
 
-nav {
-  margin: 0 auto;
-  text-align: right;
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
+/* Navbar start */
+
 .top-nav {
-  width: 100%;
-  height: 85px;
-  border-bottom: 1px solid #000;
   position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  width: 100%;
+  background-color: white;
 }
 
 .logo {
+  height: 4.5rem;
+  margin-top: .4rem; 
+}
+
+.top-nav h1 {
+  margin-top: -.1rem;
+  margin-bottom: -.1rem;
+  font-family: 'Righteous', cursive;
+  display: flex;
+  justify-content: center;
+  border-bottom: .1rem solid #eee;
+}
+
+.top-nav button {
+  padding-top: .5rem;
+  padding-bottom: .7rem;
+  border-bottom: .2rem solid #eee;
+  width: 100%;
+  background-color: #eee;
+  border-left: none;
+  border-right: none;
+}
+
+i {
+  padding-left: .3rem;
+}
+
+/* burger */
+
+/* burger */
+
+.menu-links  {
+  width: 100%;
   display: block;
-  position: absolute;
-  top: 10px;
-  left: 70px;
-  height: 60px;
-}
-
-.top-nav ul {
-  font-family: 'Merriweather Sans', sans-serif;
-  display: inline-block;
-  margin-right: 70px;
-  text-transform: uppercase;
-  padding-top: 30px;
-  font-size: larger;
-}
-
-.top-nav a {
-  color: white;
+  background-color: white;
+  height: 100vh;
 }
 
 .top-nav ul li {
-  display: inline-block;
-  padding-left: 60px;
+  font-family: 'Oswald', sans-serif;
+  font-size: larger;
+  list-style: none;
+  border-bottom: .1em solid #eee;
+  text-transform: uppercase;
+  padding-left: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
+.top-nav a {
+  color: black;
+}
+
+
+.call-now a {
+  color: rgb(29, 90, 170, 0.6);
+  font-size: x-large;
+}
+
+.call-now a:active {
+  color: black;
+}
+
+.top-nav a:active {
+  color: rgb(29, 90, 170, 0.6);
+}
+
+
+/* Navbar end */
+
 .banner-intro {
-  background-image: linear-gradient(rgb(0,0,0,0.6),rgb(0,0,0,0.6)), url(/img/bg.jpg);
-  -webkit-background-size: cover;
+  background-image: linear-gradient(rgba(29, 90, 170, 0.6),rgb(29, 90, 170, 0.6)), url(/img/bg.jpg);
   background-size: cover;
   background-position: center center;
   display: flex;
@@ -59,21 +106,32 @@ nav {
 } 
 
 .banner-intro h2 {
-  font-family: 'Concert One', cursive;
+  font-family: 'Righteous', cursive;
+  font-size: 5.5em;
+  color: white;
   text-transform: uppercase;
-  color: #fff;
-  font-size: 80px;
 }
 
-.main {
-  
-}
+@media screen and (min-width: 600px){
+  .top-nav button {
+    display: none;
+  }
 
-.services {
-  height: 400px;
-}
+  .top-nav {
+    flex-direction: row;
+    border-bottom: 1px solid #eee;
+  }
 
-.about {
-  height: 250px;
-  background-color: #bebebe;
+  .menu-links {
+    all: unset;
+    width: 100%;
+    display: flex;
+    border: none;
+
+  }
+
+  .menu-links li {
+    border: none;
+
+  }
 }
