--- a/css/styles.css
+++ b/css/styles.css
@@ -11,127 +11,44 @@ a {
 
 body {
   font-family: 'Roboto', sans-serif;
+  /* font-family: 'Righteous', cursive; */
+  /* font-family: 'Oswald', sans-serif; */
 }
 
 /* Navbar start */
 
-.top-nav {
+nav {
   position: fixed;
-  display: flex;
-  flex-direction: column;
-  align-content: flex-start;
-  width: 100%;
   background-color: white;
+  width: 100%;
+  height: 4rem;
 }
 
-.logo {
-  height: 4.5rem;
-  margin-top: .4rem; 
+.top-nav {
+  position: relative;
+  border: 1px solid red;
 }
 
 .top-nav h1 {
-  margin-top: -.1rem;
-  margin-bottom: -.1rem;
-  font-family: 'Righteous', cursive;
-  display: flex;
-  justify-content: center;
-  border-bottom: .1rem solid #eee;
-}
-
-.top-nav button {
-  padding-top: .5rem;
-  padding-bottom: .7rem;
-  border-bottom: .2rem solid #eee;
-  width: 100%;
-  background-color: #eee;
-  border-left: none;
-  border-right: none;
-}
-
-i {
-  padding-left: .3rem;
+  position: absolute;
+  border: 1px solid red;
 }
 
 /* burger */
-
-/* burger */
-
-.menu-links  {
-  width: 100%;
-  display: block;
-  background-color: white;
-  height: 100vh;
+.top-nav h2 {
+  position: absolute;
+  padding: .5rem .7rem .5rem .7rem;
+  right: 0;
+  top: 0;
+  border: 1px solid #eee;
 }
 
-.top-nav ul li {
-  font-family: 'Oswald', sans-serif;
-  font-size: larger;
-  list-style: none;
-  border-bottom: .1em solid #eee;
-  text-transform: uppercase;
-  padding-left: 30px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+.top-nav i {
+  font-size: 2rem;
 }
+/* end of burger */
 
-.top-nav a {
-  color: black;
-}
+.nav-menu {
+margin-top: 5em;
 
-
-.call-now a {
-  color: rgb(29, 90, 170, 0.6);
-  font-size: x-large;
-}
-
-.call-now a:active {
-  color: black;
-}
-
-.top-nav a:active {
-  color: rgb(29, 90, 170, 0.6);
-}
-
-
-/* Navbar end */
-
-.banner-intro {
-  background-image: linear-gradient(rgba(29, 90, 170, 0.6),rgb(29, 90, 170, 0.6)), url(/img/bg.jpg);
-  background-size: cover;
-  background-position: center center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-} 
-
-.banner-intro h2 {
-  font-family: 'Righteous', cursive;
-  font-size: 5.5em;
-  color: white;
-  text-transform: uppercase;
-}
-
-@media screen and (min-width: 600px){
-  .top-nav button {
-    display: none;
-  }
-
-  .top-nav {
-    flex-direction: row;
-    border-bottom: 1px solid #eee;
-  }
-
-  .menu-links {
-    all: unset;
-    width: 100%;
-    display: flex;
-    border: none;
-
-  }
-
-  .menu-links li {
-    border: none;
-
-  }
 }
