--- a/css/styles.css
+++ b/css/styles.css
@@ -21,17 +21,20 @@ nav {
   position: fixed;
   background-color: white;
   width: 100%;
-  height: 4rem;
+  border-bottom: 1px solid #eee;
+  height: 3.15rem;
 }
 
 .top-nav {
   position: relative;
-  border: 1px solid red;
 }
 
 .top-nav h1 {
+  font-family: 'Righteous', cursive;
   position: absolute;
-  border: 1px solid red;
+  margin: 0;
+  padding-left: .8rem;
+  padding-top: .4rem;
 }
 
 /* burger */
@@ -43,12 +46,94 @@ nav {
   border: 1px solid #eee;
 }
 
+#navbar-toggle {
+  cursor: pointer; 
+}
+
 .top-nav i {
   font-size: 2rem;
 }
 /* end of burger */
 
 .nav-menu {
-margin-top: 5em;
+  margin-top: 3.1em;
+}
+
+.menu-links {
+  font-family: 'Oswald', sans-serif;
+  list-style: none;
+  text-transform: uppercase;
+  font-size: larger;
+  width: 100%;
+  display: none;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-links li {
+  padding-left: .8rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #eee;
+  width: 100%;
+}
+
+.menu-links a {
+  color: black;
+}
+
+
+.call-now a {
+  color: rgb(29, 90, 170, 0.6);
+  font-size: x-large;
+}
+
+.call-now a:active {
+  color: black;
+}
+
+.menu-links a:active {
+  color: rgb(29, 90, 170, 0.6);
+}
+
+@media screen and (min-width: 600px){
+  nav {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  /* burger */
+  .top-nav h2 {
+    display: none;
+  }
+  /* end of burger */
+  
+  .top-nav {
+    flex: 1;
+  }
+
+  .nav-menu {
+    flex: 1; 
+    margin-top: .7rem;
+  }
+  
+  .menu-links {
+    display: flex;
+
+  }
+  
+  .menu-links li {
+    padding: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    border: none;
+  }
+
+  .menu-links .call-now {
+    padding-bottom: .1rem;
+  }
+  
 
 }
+
+/* Header start here */
