--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ a {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Rubik', sans-serif;
   /* font-family: 'Righteous', cursive; */
   /* font-family: 'Oswald', sans-serif; */
 }
@@ -23,6 +23,7 @@ nav {
   width: 100%;
   border-bottom: 2px  solid #eee;
   height: 2.23rem;
+  z-index: 999;
 }
 
 .top-nav {
@@ -112,7 +113,7 @@ nav {
   /* end of burger */
   
   .top-nav {
-    flex: 1;
+    flex: 2;
   }
 
   .nav-menu {
@@ -135,13 +136,12 @@ nav {
   .menu-links .call-now {
     padding-bottom: .1rem;
   }
-  
-
 }
 
 /* Header start here */
 
 header {
+  position: relative;
   background-image: linear-gradient(rgba(29, 90, 170, 0.6),rgb(29, 90, 170, 0.6)), url(/img/cover.jpg);
   background-size: cover;
   background-position: center center;
@@ -149,4 +149,49 @@ header {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-attachment: fixed;
+
+  text-align: center;
 }
+
+header h2 {
+  position: absolute;
+  top: 6rem;
+  font-family: 'Righteous', cursive;
+  color: white;
+  font-size: 4em;
+  text-transform: uppercase;
+  letter-spacing: .02em;
+  
+  max-width: 35rem;
+}
+
+.logo {
+  position: absolute;
+  bottom: 16rem;
+  height: 1em;
+}
+
+header p {
+  position: absolute;
+  bottom: 8.5rem;
+  font-family: 'Rubik', sans-serif;
+  color: white;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  max-width: 35rem;
+  font-weight: 300px;
+}
+
+header span {
+  position: absolute;
+  bottom: .0;
+  font-size: 1.5rem;
+  color: white;
+}
+
+/* About section */
