--- a/css/styles.css
+++ b/css/styles.css
@@ -156,25 +156,33 @@ header {
   text-align: center;
 }
 
+.header-title {
+  position: absolute;
+  bottom: 30rem;
+  color: white;
+  font-family: 'Oswald', sans-serif;
+  
+}
+
 header h2 {
   position: absolute;
-  top: 6rem;
+  bottom: 18.2rem;
   font-family: 'Righteous', cursive;
   color: white;
   font-size: 4em;
   text-transform: uppercase;
   letter-spacing: .02em;
-  
+  line-height: .9;
   max-width: 35rem;
 }
 
 .logo {
   position: absolute;
-  bottom: 16rem;
+  bottom: 15rem;
   height: 1em;
 }
 
-header p {
+.header-description {
   position: absolute;
   bottom: 8.5rem;
   font-family: 'Rubik', sans-serif;
@@ -189,9 +197,11 @@ header p {
 
 header span {
   position: absolute;
-  bottom: .0;
+  bottom: 1rem;
   font-size: 1.5rem;
   color: white;
 }
+
+
 
 /* About section */
