--- a/css/styles.css
+++ b/css/styles.css
@@ -140,8 +140,19 @@ nav {
 
 /* Header start here */
 
-header {
+.banner-intro {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 0;
+  margin-right: 0;
+  padding-top: 3rem;
+  padding-bottom: 4rem;
+}
+
+header {
   background-image: linear-gradient(rgba(29, 90, 170, 0.6),rgb(29, 90, 170, 0.6)), url(/img/cover.jpg);
   background-size: cover;
   background-position: center center;
@@ -152,21 +163,23 @@ header {
   display: flex;
   flex-direction: column;
   background-attachment: fixed;
-
   text-align: center;
 }
 
 .header-title {
-  position: absolute;
-  bottom: 30rem;
+  position: relative;
+  bottom: 1.8rem;
+
   color: white;
   font-family: 'Oswald', sans-serif;
   
 }
 
 header h2 {
-  position: absolute;
-  bottom: 18.2rem;
+  position: relative;
+  bottom: .3rem;
+
+  text-align: center;
   font-family: 'Righteous', cursive;
   color: white;
   font-size: 4em;
@@ -174,17 +187,21 @@ header h2 {
   letter-spacing: .02em;
   line-height: .9;
   max-width: 35rem;
+  margin-left: .5rem;
+  margin-right: .5rem;
 }
 
 .logo {
-  position: absolute;
-  bottom: 15rem;
+  position: relative;
+  top: 2.4rem;
+
   height: 1em;
 }
 
 .header-description {
-  position: absolute;
-  bottom: 8.5rem;
+  position: relative;
+  top: 3.4rem;
+
   font-family: 'Rubik', sans-serif;
   color: white;
   margin-block-start: 1em;
@@ -193,11 +210,13 @@ header h2 {
   margin-inline-end: 0px;
   max-width: 46rem;
   font-weight: 300px;
+  margin-left: .5rem;
+  margin-right: .5rem;
 }
 
 header span {
   position: absolute;
-  bottom: 1rem;
+  bottom: 0;
   font-size: 1.5rem;
   color: white;
 }
