--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,117 @@
+* {
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  font-family: 'Rubik', sans-serif;
+  /* font-family: 'Righteous', cursive; */
+  /* font-family: 'Oswald', sans-serif; */
+}
+
+/* Navbar start */
+
+nav {
+  display: flex; 
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  border-bottom: 2px  solid #eee;
+  z-index: 999;
+}
+
+.top-nav {
+  flex: 3;
+  position: relative;
+}
+.top-nav h1 {
+  font-family: 'Righteous', cursive;
+  margin: 0;
+  font-size: 1.2rem;
+}
+
+/* burger */
+.top-nav h2 {
+  display: none;
+  position: absolute;
+  padding: 0rem .6rem .4rem .6rem;
+
+  right: 0;
+  top: 0;
+  border: 1px solid #eee;
+}
+
+#navbar-toggle {
+  cursor: pointer; 
+}
+
+.top-nav i {
+  font-size: 1.2rem;
+}
+/* end of burger */
+
+.nav-menu {
+  flex: 1;
+  background-color: white;
+}
+
+.menu-links {
+  font-family: 'Oswald', sans-serif;
+  list-style: none;
+  text-transform: uppercase;
+  font-size: .7rem;
+  width: 100%;
+  display: flex;
+}
+
+.menu-links li {
+  padding-left: .8rem;
+  padding-top: .8rem;
+  padding-bottom: .8rem;
+  border-bottom: 1px solid #eee;
+  margin: 0;
+  width: 100%;
+}
+
+.home {
+  flex: 1;
+}
+.about {
+  flex: 1;
+}
+.services {
+  flex: 1;
+}
+.call-now {
+  flex: 3;
+  font-size: larger;
+}
+
+.menu-links a {
+  color: black;
+}
+
+
+.call-now a {
+  color: rgb(29, 90, 170, 0.6);
+}
+
+.call-now a:active {
+  color: black;
+}
+
+.menu-links a:active {
+  color: rgb(29, 90, 170, 0.6);
+}
+
+
+/* 
+
 
 * {
   box-sizing: border-box;
@@ -100,7 +214,7 @@ nav {
   color: rgb(29, 90, 170, 0.6);
 }
 
-@media screen and (min-width: 600px){
+@media screen and (min-width: 650px){
   nav {
     display: flex;
     flex-direction: row;
@@ -118,7 +232,7 @@ nav {
 
   .nav-menu {
     flex: 1; 
-    margin-top: .7rem;
+    margin-top: .7em;
   }
   
   .menu-links {
@@ -134,7 +248,7 @@ nav {
   }
 
   .menu-links .call-now {
-    padding-bottom: .1rem;
+    padding-bottom: .1em;
   }
 }
 
@@ -150,20 +264,22 @@ nav {
   margin-right: 0;
   padding-top: 3rem;
   padding-bottom: 4rem;
+  width: 100%;
 }
 
 header {
   background-image: linear-gradient(rgba(29, 90, 170, 0.6),rgb(29, 90, 170, 0.6)), url(/img/cover.jpg);
-  background-size: cover;
+  background-size: auto;
   background-position: center center;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
   text-align: center;
+  
+  width: 100%;
 }
 
 .header-title {
@@ -220,7 +336,100 @@ header span {
   font-size: 1.5rem;
   color: white;
 }
-
-
-
+ /* media query lol god help me*/
+/*
+ @media screen and (min-width: 500px){
+  .banner-intro {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 3rem;
+    padding-bottom: 4rem;
+  }
+  
+  header {
+    background-image: linear-gradient(rgba(29, 90, 170, 0.6),rgb(29, 90, 170, 0.6)), url(/img/cover.jpg);
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-attachment: fixed;
+    text-align: center;
+    
+    width: 100%;
+  }
+  
+  .header-title {
+    position: relative;
+    bottom: 1.8rem;
+  
+    color: white;
+    font-family: 'Oswald', sans-serif;
+    
+  }
+  
+  header h2 {
+    position: relative;
+    bottom: .3rem;
+  
+    text-align: center;
+    font-family: 'Righteous', cursive;
+    color: white;
+    font-size: 4em;
+    text-transform: uppercase;
+    letter-spacing: .02em;
+    line-height: .9;
+    max-width: 35rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
+  }
+  
+  .logo {
+    position: relative;
+    top: 2.4rem;
+  
+    height: 1em;
+  }
+  
+  .header-description {
+    position: relative;
+    top: 3.4rem;
+  
+    font-family: 'Rubik', sans-serif;
+    color: white;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    max-width: 46rem;
+    font-weight: 300px;
+    margin-left: .5rem;
+    margin-right: .5rem;
+  }
+  
+  header span {
+    position: absolute;
+    bottom: 0;
+    font-size: 1.5rem;
+    color: white;
+  }
+  
+}
+*/
 /* About section */
+
+main {
+  
+  width: 100%;
+}
+
+
+*/
