--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ body {
   font-family: 'Rubik', sans-serif;
   /* font-family: 'Righteous', cursive; */
   /* font-family: 'Oswald', sans-serif; */
+
+  
 }
 
 /* Navbar start */
@@ -124,6 +126,7 @@ nav {
 
 .banner-intro {
   position: relative;
+  top: 1.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -157,7 +160,7 @@ header {
 .header-title {
   position: relative;
   bottom: 1.8rem;
-
+  font-size: 1.5rem;
   color: white;
   font-family: 'Oswald', sans-serif;
   
@@ -170,11 +173,11 @@ header h2 {
   font-family: 'Righteous', cursive;
   color: white;
 
-  font-size: 3em;
+  font-size: 2.5em;
 
   text-transform: uppercase;
   letter-spacing: .02em;
-  line-height: .9;
+  line-height: -.09;
   max-width: 35rem;
   margin-left: .5rem;
   margin-right: .5rem;
@@ -192,17 +195,15 @@ header h2 {
   position: relative;
 
   top: 2rem;
-
+  font-size: 0.9rem;
+  line-height: 1.3rem;
   font-family: 'Rubik', sans-serif;
   color: white;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+ 
   max-width: 46rem;
   font-weight: 300px;
-  margin-left: .5rem;
-  margin-right: .5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 header span {
@@ -213,7 +214,7 @@ header span {
 }
 
 
-@media (min-width: 500px) {
+@media (min-width: 750px) {
 
   
   header {
@@ -239,10 +240,12 @@ header span {
   
   .header-description {
     top: 5em;
+    font-size: 1rem;
+    line-height: 1rem;
   }
 }
 
-@media screen and (min-width: 650px){
+@media screen and (min-width: 950px){
   nav {
     position: fixed;
     display: flex;
@@ -307,3 +310,26 @@ header span {
 }
 
 /* About section */
+
+.services {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 3.5rem;
+  text-align: center;
+}
+
+.service-intro {
+  font-family: 'Arvo', serif;
+  font-size: 2rem;
+  font-weight: bold;
+  text-shadow: .3rem .4rem #bebebe;
+}
+
+.service-description {
+  margin-top: 2rem;
+
+}
