--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ header h2 {
 
   text-transform: uppercase;
   letter-spacing: .02em;
-  line-height: -.09;
+  line-height: .9;
   max-width: 35rem;
   margin-left: .5rem;
   margin-right: .5rem;
@@ -311,6 +311,12 @@ header span {
 
 /* About section */
 
+main {
+  margin: 0 auto;
+  max-width: 1000px;
+  text-align: center;
+}
+
 .services {
   display: flex;
   flex-direction: column;
@@ -319,7 +325,6 @@ header span {
   margin-left: 2rem;
   margin-right: 2rem;
   margin-top: 3.5rem;
-  text-align: center;
 }
 
 .service-intro {
@@ -331,5 +336,20 @@ header span {
 
 .service-description {
   margin-top: 2rem;
+
+}
+
+.service-logo {
+  height: 10rem;
+}
+
+.services-content1 {
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+.services-content2{
 
 }
