--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,75 @@ header span {
   color: white;
 }
 
+/* About section */
+
+main {
+  margin: 0 auto;
+  max-width: 1000px;
+  text-align: center;
+}
+
+.services {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 3.5rem;
+}
+
+.services-content1 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5rem;
+}
+
+.service-intro {
+  font-family: 'Arvo', serif;
+  font-size: 2rem;
+  font-weight: bold;
+  text-shadow: .3rem .4rem #bebebe;
+}
+
+.intro-description{
+  padding-top: 2rem;
+}
+
+.service-description {
+  margin-top: 1rem;
+
+}
+
+/* Individual cards */
+
+.service-logo {
+  height: 10rem;
+}
+
+.service-subtitle {
+  margin-top: .5rem;
+  font-size: small;
+}
+
+.service-title {
+  margin-top: .4rem;
+}
+
+.service-description {
+  max-width: auto;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  padding-bottom: 1rem;
+}
+
+
+
+.services-content2{
+  display: flex;
+  flex-direction: column;
+  margin-top: .5rem;
+}
 
 @media (min-width: 750px) {
 
@@ -240,8 +309,39 @@ header span {
   
   .header-description {
     top: 5em;
-    font-size: 1rem;
-    line-height: 1rem;
+    font-size: 1em;
+    line-height: 1em;
+  }
+
+  /* services section */
+
+  .services-content1{
+    flex-direction: row;
+  }
+
+  .services-content2 {
+    flex-direction: row;
+  }
+  
+  /* Individual cards */
+  
+  .service-logo {
+    height: 10em;
+  }
+  
+  .service-subtitle {
+    margin-top: .5em;
+    font-size: small;
+  }
+  
+  .service-title {
+    margin-top: .4rem;
+  }
+  
+  .service-description {
+    margin-bottom: 1.5em;
+    padding-bottom: 1.5em;
+    border-bottom: .1em solid rgb(192, 191, 191);
   }
 }
 
@@ -271,7 +371,7 @@ header span {
     padding-left: .8em;
     font-family: 'Righteous', cursive;
     margin: 0;
-    font-size: 2rem;
+    font-size: 2em;
   }
   
   /* burger */
@@ -307,49 +407,4 @@ header span {
     margin-right: 2em;
     padding-right: 1em;
   }
-}
-
-/* About section */
-
-main {
-  margin: 0 auto;
-  max-width: 1000px;
-  text-align: center;
-}
-
-.services {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 3.5rem;
-}
-
-.service-intro {
-  font-family: 'Arvo', serif;
-  font-size: 2rem;
-  font-weight: bold;
-  text-shadow: .3rem .4rem #bebebe;
-}
-
-.service-description {
-  margin-top: 2rem;
-
-}
-
-.service-logo {
-  height: 10rem;
-}
-
-.services-content1 {
-  display: flex;
-  flex-direction: column;
-}
-
-
-
-.services-content2{
-
 }
