--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@ body {
   
 }
 
+body p {
+  line-height: 1.5rem;
+  font-size: 0.9rem;
+}
+
 /* Navbar start */
 
 nav {
@@ -146,12 +151,12 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-
-  height: 36rem;
-
+  height: 32rem;
   display: flex;
   flex-direction: column;
+  /*
   background-attachment: fixed;
+  */
   text-align: center;
   overflow: hidden;
   position: relative;
@@ -168,7 +173,7 @@ header {
 
 header h2 {
   position: relative;
-  bottom: .3rem;
+  bottom: .6rem;
   text-align: center;
   font-family: 'Righteous', cursive;
   color: white;
@@ -194,9 +199,8 @@ header h2 {
 .header-description {
   position: relative;
 
-  top: 2rem;
+  top: 2.5rem;
   font-size: 0.9rem;
-  line-height: 1.3rem;
   font-family: 'Rubik', sans-serif;
   color: white;
  
@@ -207,10 +211,7 @@ header h2 {
 }
 
 header span {
-  position: absolute;
-  bottom: 0;
-  font-size: 1.5rem;
-  color: white;
+  display: none;
 }
 
 /* About section */
@@ -231,17 +232,20 @@ main {
   margin-top: 3.5rem;
 }
 
+
 .services-content1 {
   display: flex;
   flex-direction: column;
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
 
 .service-intro {
+  padding-top: .5rem;
   font-family: 'Arvo', serif;
   font-size: 2rem;
+  line-height:3rem;
   font-weight: bold;
-  text-shadow: .3rem .4rem #bebebe;
+  text-shadow: .6rem .4rem #bebebe;
 }
 
 .intro-description{
@@ -255,8 +259,10 @@ main {
 
 /* Individual cards */
 
+
+
 .service-logo {
-  height: 10rem;
+  height: 4.5rem;
 }
 
 .service-subtitle {
@@ -269,10 +275,17 @@ main {
 }
 
 .service-description {
-  max-width: auto;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  padding-bottom: 1rem;
+  max-width: 100%;
+  padding-bottom: 5rem;
+  
+  border-bottom: .15em solid #eee;
+}
+
+button {
+  position: relative;
+  bottom: 3.5rem;
+  cursor: pointer;
+  margin-bottom: 10rem;
 }
 
 
@@ -285,12 +298,24 @@ main {
 
 @media (min-width: 750px) {
 
-  
+  body p {
+    line-height: 2rem;
+    font-size: 1em;
+  }
+
   header {
     background-size: cover;
     height: 100vh; 
 
     background-position: center center;
+  }
+
+  header span {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    font-size: 1.5rem;
+    color: white;
   }
   
   .header-title {
@@ -318,15 +343,11 @@ main {
   .services-content1{
     flex-direction: row;
   }
-
-  .services-content2 {
-    flex-direction: row;
-  }
   
   /* Individual cards */
   
   .service-logo {
-    height: 10em;
+    height: 5em;
   }
   
   .service-subtitle {
@@ -341,7 +362,8 @@ main {
   .service-description {
     margin-bottom: 1.5em;
     padding-bottom: 1.5em;
-    border-bottom: .1em solid rgb(192, 191, 191);
+    border-bottom: none;
+    margin-bottom: none;
   }
 }
 
