--- a/css/styles.css
+++ b/css/styles.css
@@ -154,9 +154,9 @@ header {
   height: 32rem;
   display: flex;
   flex-direction: column;
-  /*
+  
   background-attachment: fixed;
-  */
+  
   text-align: center;
   overflow: hidden;
   position: relative;
@@ -218,7 +218,6 @@ header span {
 
 main {
   margin: 0 auto;
-  max-width: 1000px;
   text-align: center;
 }
 
@@ -289,13 +288,6 @@ button {
 }
 
 
-
-.services-content2{
-  display: flex;
-  flex-direction: column;
-  margin-top: .5rem;
-}
-
 @media (min-width: 750px) {
 
   body p {
@@ -340,8 +332,50 @@ button {
 
   /* services section */
 
+  .intro-description {
+    max-width: 1000px;
+  }
+
   .services-content1{
+    max-width: 1250px;
     flex-direction: row;
+    justify-content: space-between;
+    border-bottom: .1em solid #eee;
+  }
+
+  .servcard1 {
+    flex: 1;
+    padding-right: .6em;
+  }
+
+  .servcard1 button {
+    position: relative;
+    bottom: 1.5em;
+  }
+
+  .servcard2 {
+    flex: 1;
+    border-right: .1em solid #eee;
+    border-left: .1em solid #eee;
+    margin-right: .5em;
+    margin-left: .5em;
+    padding-right: .6em;
+    padding-left: .6em;
+  }
+
+  .servcard2 button {
+    position: relative;
+    bottom: 1.5em;
+  }
+
+  .servcard3 {
+    padding-left: .6em;
+    flex: 1;
+  }
+
+  .servcard3 button {
+    position: relative;
+    bottom: 1.5em;
   }
   
   /* Individual cards */
@@ -386,7 +420,8 @@ button {
     position: relative;
     width: 100%;
   }
-  
+
+
   .top-nav h1 {
     position: relative;
     padding-top: .2em;
@@ -428,5 +463,10 @@ button {
   .call-now {
     margin-right: 2em;
     padding-right: 1em;
+  }
+}
+@media screen and (min-width: 1275px){
+  .service-intro {
+    font-size: 2.5rem;
   }
 }
