--- a/css/styles.css
+++ b/css/styles.css
@@ -285,8 +285,43 @@ button {
   bottom: 3.5rem;
   cursor: pointer;
   margin-bottom: 10rem;
+  background-color: rgb(29, 90, 170, 0.6);
+  padding: .5rem;
+  color: white;
+  border-radius: 5px;
 }
 
+.about {
+  margin-top: 1rem;
+  width: 100%;
+  height: 400px;
+  border: 1px solid red;
+}
+
+footer {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1.5rem;
+  padding-top: 1.5rem;
+}
+
+footer h2 {
+  flex: 1;
+}
+
+.footer-contacts{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.email {
+}
+.location{
+}
+.phone{
+}
 
 @media (min-width: 750px) {
 
@@ -327,7 +362,7 @@ button {
   .header-description {
     top: 5em;
     font-size: 1em;
-    line-height: 1em;
+    line-height: 1.5em;
   }
 
   /* services section */
