--- a/css/styles.css
+++ b/css/styles.css
@@ -297,30 +297,40 @@ button {
   height: 400px;
   border: 1px solid red;
 }
-
+/* footer content */
 footer {
-  background-color: white;
+  background-color: rgba(243, 243, 243, 0.705);
   display: flex;
   flex-direction: column;
+  align-content: center;
   padding-bottom: 1.5rem;
   padding-top: 1.5rem;
+  text-align: center;
+  line-height: 4rem;
 }
 
-footer h2 {
+footer ul{
+  list-style-type: none;
+}
+
+footer ul li{
+  line-height: 6rem;
+}
+
+.footer-ql{
   flex: 1;
 }
 
-.footer-contacts{
+.footer-services{
   flex: 1;
-  display: flex;
-  flex-direction: column;
 }
 
-.email {
+.getintouch{
+  flex: 1;
 }
-.location{
-}
-.phone{
+
+footer h2{
+  font-family: 'Righteous', cursive;
 }
 
 @media (min-width: 750px) {
@@ -434,6 +444,47 @@ footer h2 {
     border-bottom: none;
     margin-bottom: none;
   }
+
+  /* footer */
+  footer{
+    position: relative;
+  }
+
+  .footer3column{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-bottom: 6em;
+    text-align: left;
+    width: 100%;
+  }
+
+  .quicklinks{
+    flex: 1;
+    margin-left: 2.5em;
+  }
+  
+  .footer-services{
+    flex: 1;
+
+    padding-left: 2.5em;
+    border-right: .1em solid #bebebe94;
+    border-left: .1em solid #bebebe94;
+  }
+  
+  .getintouch{
+    flex: 1;
+    padding-left: 2.5em;
+    margin-right: 2em;
+  }
+
+  .footerbcn{
+    
+    position: absolute;
+    bottom: .6em;
+
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 950px){
@@ -499,6 +550,19 @@ footer h2 {
     margin-right: 2em;
     padding-right: 1em;
   }
+
+  .footerbcn{
+    position: relative;
+    margin-right: 2em;
+    max-width: 1200px;
+  }
+
+  .footer3column{
+
+    max-width: 1200px;
+  }
+  
+  
 }
 @media screen and (min-width: 1275px){
   .service-intro {
