--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ nav {
 }
 
 header {
-  background-image: linear-gradient(rgba(29, 90, 170, 0.6),rgb(29, 90, 170, 0.6)), url(/img/cover.jpg);
+  background-image: linear-gradient(rgba(29, 90, 170, 0.6),rgb(29, 90, 170, 0.6)), url(https://s3-us-west-1.amazonaws.com/bcn-business-connect/cover.jpg);
   
   background-size: auto;
 
